# first_web_scraping_project

./: .env-example  README.md  docker-compose.yml  pyproject.toml  redis_store_config.py
src/: redis_store_config.py  start.py
src/browser/: ml_browser.py  ml_request.py
src/browser/actions/: browser_actions.py
src/browser/crawler/: default_crawler.py  generic_crawler.py
src/browser/providers/: browser_provider.py
src/browser/tools/: mongodb.py
